# signals-engine

./: .gitignore  README.md  pyproject.toml  review.md  switch-plan.md
docs/design/: 2026-04-06-signal-engine-implementation-plan.md  2026-04-06-signal-engine-v1-spec.md  2026-04-06-x-feed-migration-spec.md  2026-04-06-x-feed-native-runtime-debug-plan.md  2026-04-06-x-feed-native-source-migration-design.md  2026-04-06-x-feed-native-source-migration-design.zh-CN.md  2026-04-06-x-feed-native-source-migration-implementation-plan.md  2026-04-08-x-following-native-migration-design.md  2026-04-11-signals-engine-github-watch-split-into-three-repo-lanes.md  2026-04-12-polymarket-source-migration-design.md  2026-04-12-polymarket-source-migration-implementation-plan.md  2026-04-12-polymarket-source-migration-prd.zh-CN.md  2026-04-12-x-browser-session-auth-trd.md
docs/implementation/: 2026-04-06-x-feed-native-source-implementation-plan.md
docs/reviews/: 2026-04-11-signals-engine-github-watch-split-codex-review.md
scripts/: check_no_opencli.py  migrate_x_feed_config.py
tests/: test_cli_entrypoint.py  test_default_resolution.py  test_diagnose_product_hunt_watch.py  test_github_repo_watch.py  test_hacker_news_search_watch.py  test_hacker_news_watch.py  test_package_imports.py  test_polymarket_watch.py  test_product_hunt_watch.py  test_reddit_watch.py  test_render.py  test_rize_watch.py  test_runtime_debug_logging.py  test_weather_watch.py  test_x_browser_session.py  test_x_feed_collect.py  test_x_feed_diagnose_native.py  test_x_following_collect.py  test_x_source.py
(+89 files in other folders)
