[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signals-engine"
version = "0.2.0"
description = "Python collect CLI for signal-oriented collection lanes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "httpx>=0.27.0", "playwright>=1.52.0"]

[project.scripts]
signals-engine = "signals_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
